@@ -20,11 +20,21 @@
 ### This has to be a relative directory.
 #dist.dir=dist
 
+### The name of the wine executable for building the Windows installer on *nix.
+#wine.executable=wine
+
+### The name of the winepath executable for translating paths for wine.
+#winepath.executable=winepath
+
 ### The name of the Inno Setup command line compiler
 ### executable for building the Windows installer.
 
 # Example Windows location
 #innosetup.compiler.executable=C:\\Program Files\\Inno Setup 5\\ISCC.exe
+
+# Example wine location
+#innosetup.compiler.executable=/home/vampire/.wine/drive_c/Program Files/Inno Setup 5/ISCC.exe
+#innosetup.via.wine=true
 
 ### For generating the docs, adjust the following to your local paths
 ### Prefer xml over sgml packages if available.
