@@ -21,13 +21,13 @@ ChangesEnvironment=true
 DefaultDirName={pf}\jEdit
 DefaultGroupName=jEdit
 FlatComponentsList=false
-LicenseFile=@dist.dir@\doc\COPYING.txt
+LicenseFile=@dist.dir.possibly.for.wine@\doc\COPYING.txt
 OutputBaseFilename=@win.filename@
-OutputDir=@dist.dir@
-SetupIconFile=@base.dir@\icons\jedit.ico
+OutputDir=@dist.dir.possibly.for.wine@
+SetupIconFile=@base.dir.possibly.for.wine@\icons\jedit.ico
 ShowTasksTreeLines=true
 SolidCompression=true
-SourceDir=@dist.dir@
+SourceDir=@dist.dir.possibly.for.wine@
 TimeStampsInUTC=true
 UninstallDisplayIcon={app}\jedit.exe
 UninstallDisplayName=jEdit @jedit.version@
@@ -36,8 +36,8 @@ VersionInfoCopyright=Copyright © 1998-@current.year@ Contributors
 VersionInfoDescription=Programmer's Text Editor
 VersionInfoTextVersion=@jedit.version@
 VersionInfoVersion=@jedit.build.number@
-WizardImageFile=@base.dir@\icons\WindowsInstallerImage.bmp
-WizardSmallImageFile=@base.dir@\icons\WindowsInstallerSmallImage.bmp
+WizardImageFile=@base.dir.possibly.for.wine@\icons\WindowsInstallerImage.bmp
+WizardSmallImageFile=@base.dir.possibly.for.wine@\icons\WindowsInstallerSmallImage.bmp
 
 [Components]
 Name: main; Description: jEdit - Programmer's Text Editor; Flags: fixed; Types: custom compact full
